# order-management

./: .gitignore  BP Order Management.spec  BP-Order-Management.spec  README.md  main.py  package.json  pnpm-lock.yaml  pom.xml  pyproject.toml
.github/workflows/: build.yml
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/app/: app.spec.ts  app.ts
src/main/java/com/kerajarvi/tracker/: TrackerApplication.java
src/order_management/: app.py  version.py
src/order_management/data/: customer_repository.py  db.py  order_repository.py  settings.py
src/order_management/services/: customer_service.py  order_service.py  pdf_service.py  seed_service.py
src/order_management/ui/: constants.py  file_utils.py  main_window.py
src/order_management/ui/tabs/: __init__.py  customers_tab.py  orders_tab.py  reports_tab.py
src/order_management/ui/widgets/: __init__.py  button_bar.py  form_fields.py  treeview_helper.py
src/order_management/utils/: __init__.py  date_utils.py
src/test/java/com/kerajarvi/tracker/: TrackerApplicationTests.java
