[project]
name = "bp-order-management"
version = "0.1.0"
description = "BP Order Management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fpdf2>=2.8.5",
    "tkcalendar>=1.6.1",
]

[project.scripts]
order-management = "order_management.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
