[project]
name = "bp-order-management"
version = "0.4.0"
description = "BP Order Management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fpdf2>=2.8.5",
    "tkcalendar>=1.6.1",
]

[project.scripts]
order-management = "order_management.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build/", "dist/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "ERA", # eradicate
    "F",   # Pyflakes
    "I",   # isort
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "T20", # flake8-print
    "UP",  # pyupgrade
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pre-commit>=4.6.0",
    "ruff>=0.12.4",
]
